Fix WC Bookings table on mobile

--- a/assets/css/calypsoify.css
+++ b/assets/css/calypsoify.css
@@ -53,6 +53,17 @@ div.woocommerce-message, .wc-helper .start-container {
 	margin-right: 8px;
 }
 
+/* WC Bookings Tables */
+.post-type-wc_booking .wp-list-table tr:not(.inline-edit-row):not(.no-items) td:not(.check-column) {
+	display: table-cell;
+}
+.post-type-wc_booking .wp-list-table tr:not(.inline-edit-row):not(.no-items) td:not(.column-primary)::before {
+	display: none;
+}
+.post-type-wc_booking .wp-list-table tr .booking_actions a.button {
+	width: 30px;
+}
+
 /* Pagination */
 .tablenav-pages {
 	display: none;
@@ -249,11 +260,11 @@ input[type=radio]:checked:before {
 	0% {
 		transform: scale(0.3);
 	}
-
+	
 	60% {
 		transform: scale(1.15);
 	}
-
+	
 	100% {
 		transform: scale(1);
 	}
